--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../shared/app.css" />
-    <script src="../shared/utils.js"></script>
+    <link rel="stylesheet" type="text/css" href="./shared/app.css" />
+    <script src="./shared/utils.js"></script>
   </head>
   <body>
     <div id="enter-ar-info" class="mdc-card demo-card">
@@ -53,6 +53,6 @@
       </p>
     </div>
     <script src="app.js"></script>
-  <div id="stabilization" />
+    <div id="stabilization"></div>
   </body>
 </html>
